# solvyn

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
base/: urls.py
base/models/__init__.py/: abstract.py
base/static/css/: styles.css
base/templates/base/: index.html
base/views/: base_views.py
k8s/: base.yaml
solvyn/: asgi.py  settings.py  urls.py  wsgi.py
