[tool.poetry]
name = "solvyn"
version = "0.1.0"
description = ""
authors = ["Tri Dang <quangtrister@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
django = "^5.2.3"
gunicorn = "^23.0.0"
psycopg = "^3.2.9"
python-dotenv = "^1.1.0"
google-adk = "^1.3.0"
django-htmx = "^1.23.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
